# cargo-scripts

./: Cargo.toml  README.md  template.crs
.github/workflows/: ci.yml
src/: lib.rs  main.rs
